<?xml version="1.0" encoding="utf-8"?>
<!-- this is the comment activity layout-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!-- this is the list of comments-->
    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/comments_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical"
        android:listSelector="@android:color/transparent">
    </ListView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textVisiblePassword|textMultiLine"
            android:ems="10"
            android:hint="@string/write_comment_hint"
            android:id="@+id/comment_edit_text"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/add_comment_button_text"
            android:background="@drawable/button_shape_default"
            android:id="@+id/add_comment_button" />

    </LinearLayout>


</LinearLayout>