...
            android:layout_marginBottom="41dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portfolio_button_text"
            android:id="@+id/profile_portfolio_button"
            android:layout_above="@+id/profile_logout_button"
            android:layout_alignRight="@+id/profile_logout_button"
            android:background="@drawable/button_shape_default"
            android:layout_alignEnd="@+id/profile_logout_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discovery_button_text"
            android:id="@+id/profile_discovery_button"
            android:background="@drawable/button_shape_default"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

...
