<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/article_spinner"
            android:layout_weight="1"
            android:entries="@array/article_spinner_entries"
            />
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/gender_submitted_by_spinner"
            android:layout_weight="1"
            android:entries="@array/gender_submitted_by_spinner_entries"/>
        />

    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:id="@+id/discovery_image_view"
        android:layout_gravity="center_horizontal" />
    <!-- button to view comments-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments_button_text"
        android:id="@+id/view_comments_button"
        android:background="@drawable/button_shape_default"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/displayed_article_text_view"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/displayed_submission_gender_of_submitter_text_view"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <!--dislike button -->
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/dislike_button_text"
            android:id="@+id/discovery_dislike_button"
            android:background="@drawable/button_shape_red"/>
        <!-- like button-->
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/like_button_text"
            android:background="@drawable/button_shape_green"
            android:id="@+id/discovery_like_button" />
    </LinearLayout>
</LinearLayout>